src/test/ui/json_error_format/issue-53934-multiple-substitutions.rs
// compile-flags: --error-format pretty-json -Zunstable-options

fn main() {
    let xs = vec![String::from("foo")];
    let d: &Display = &xs;
    println!("{}", d);
}
